cmake_minimum_required(VERSION 3.8)
project(splunk_hec_client_cpp)

set(CMAKE_CXX_STANDARD 17)
include_directories(${OPENSSL_ROOT_DIR}/include)
set(JSON_EVENT_EXAMPLE json_event_example.cpp)
set(RAW_EVENT_EXAMPLE raw_event_example.cpp)
set(RAW_EVENT_BATCH_EXAMPLE raw_event_batch_example.cpp ${LIB_SOURCE_FILES})
set(JSON_EVENT_BATCH_EXAMPLE json_event_batch_example.cpp ${LIB_SOURCE_FILES})
set(CPPRESTSDK_EXAMPLE cpprestsdk_example.cpp)
set(INDEXER_EXAMPLE indexer_example.cpp ${LIB_SOURCE_FILES})
set(BLOCKING_QUEUE_EXAMPLE blocking_queue_example.cpp)
set(THREAD_POOL_EXAMPLE thread_pool_example.cpp)
set(RAPIDJSON_EXAMPLE rapidjson_example.cpp ${LIB_SOURCE_FILES})
set(ACK_POLLER_EXAMPLE ack_poller_example.cpp ${LIB_SOURCE_FILES})
set(CONCURRENT_HEC_EXAMPLE concurrent_hec_exmaple.cpp ${LIB_SOURCE_FILES})

add_executable(json_event_example ${JSON_EVENT_EXAMPLE})
add_executable(raw_event_example ${RAW_EVENT_EXAMPLE})
add_executable(json_event_batch_example ${JSON_EVENT_BATCH_EXAMPLE})
add_executable(raw_event_batch_example ${RAW_EVENT_BATCH_EXAMPLE})
add_executable(cpprestsdk_example ${CPPRESTSDK_EXAMPLE})
add_executable(indexer_example ${INDEXER_EXAMPLE})
add_executable(blocking_queue_example ${BLOCKING_QUEUE_EXAMPLE})
add_executable(thread_pool_example ${THREAD_POOL_EXAMPLE})
add_executable(rapidjson_example ${RAPIDJSON_EXAMPLE})
add_executable(ack_poller_example ${ACK_POLLER_EXAMPLE})
add_executable(concurrent_hec_example ${CONCURRENT_HEC_EXAMPLE})

link_directories(${OPENSSL_ROOT_DIR}/lib)

if(WIN32)
endif(WIN32)

if(APPLE)
    set(DEPENDENT_LIBS cpprest boost_system-mt boost_thread-mt boost_chrono-mt ${OPENSSL_ROOT_DIR}/lib/libcrypto.dylib ${OPENSSL_ROOT_DIR}/lib/libssl.dylib)
endif(APPLE)

if(UNIX AND NOT APPLE)
    set(DEPENDENT_LIBS cpprest boost_system boost_thread boost_chrono pthread crypto ssl)
endif(UNIX AND NOT APPLE)

target_link_libraries(blocking_queue_example pthread)
target_link_libraries(thread_pool_example pthread)
target_link_libraries(rapidjson_example ${DEPENDENT_LIBS})
target_link_libraries(json_event_batch_example ${DEPENDENT_LIBS})
target_link_libraries(raw_event_batch_example ${DEPENDENT_LIBS})
target_link_libraries(cpprestsdk_example ${DEPENDENT_LIBS})
target_link_libraries(indexer_example ${DEPENDENT_LIBS})
target_link_libraries(ack_poller_example ${DEPENDENT_LIBS})
target_link_libraries(concurrent_hec_example ${DEPENDENT_LIBS})
